<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_category"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.phoobs.pointplace2.CategoryActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        app:theme="@style/AppBar"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/nav_title"
            android:layout_gravity="center"
            android:id="@+id/toolbar_logo"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e4e4e4"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linearlayout_list">

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:paddingTop="100dp"
        android:background="@drawable/result_cell_shadow"
        android:id="@+id/relativeLayout_no_result"
        android:layout_margin="10dp"
        android:layout_below="@+id/toolbar">

        <ImageView
            android:id="@+id/imageView_no_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_no_results"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView_no_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_no_results"
            android:textColor="@color/black_overlay"
            android:textSize="20sp"
            android:layout_above="@+id/imageView_no_icon"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView_check_soon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_check_soon"
            android:textColor="@color/black_overlay"
            android:textSize="20sp"
            android:layout_below="@+id/imageView_no_icon"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:id="@+id/relativeLayout_search"
        android:background="#35000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/result_cell_shadow"
            android:padding="15dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/search_text_shadow"
                android:ems="10"
                android:hint="@string/str_search_text_placeholder"
                android:padding="10dp"
                android:textColorHint="@color/black_panel"
                android:textStyle="italic"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView_nav_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_search_what"
                android:layout_marginLeft="10dp"
                android:textSize="17sp" />

            <RelativeLayout
                android:id="@+id/relativeLayout_search_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_selector"
                android:padding="5dp" >

                <ImageView
                    android:id="@+id/imageView_search_category_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="5dp"
                    android:src="@mipmap/home_icon_dark00" />

                <TextView
                    android:id="@+id/textView_search_category_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/imageView_search_category_icon"
                    android:text="Food &amp; Dining"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black_panel"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageView_drop1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:src="@mipmap/drop_menu_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout_search_subcategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_selector"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/textView_search_subcategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/str_search_subcategory"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black_panel"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageView_drop2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:src="@mipmap/drop_menu_icon" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView_card_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/str_search_where"
                android:layout_marginLeft="10dp"
                android:textSize="17sp" />

            <RelativeLayout
                android:id="@+id/relativeLayout_search_nearby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_selector"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/textView_search_nearby"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/str_search_nearby"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black_panel"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageView_drop3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:src="@mipmap/drop_menu_icon" />
            </RelativeLayout>

            <Button
                android:id="@+id/button_search_results"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_search"
                android:minHeight="40dip"
                android:text="@string/str_search_button"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textAllCaps="false" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
