<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/relativelayout_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_site_shadow"
        android:paddingBottom="20dp" >

        <TextView
            android:id="@+id/textView_nav_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="20dp"
            android:text="@string/str_card_address"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_overlay"
            android:textSize="16sp"
            android:textStyle="bold" />
        
        <LinearLayout
            android:id="@+id/linearlayout_info_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView_nav_title"
            android:layout_below="@+id/textView_nav_title"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearlayout_info_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearlayout_info_address"
            android:layout_below="@+id/linearlayout_info_address"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >
            
        </LinearLayout>
    
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativelayout_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_site_shadow"
        android:paddingBottom="20dp" >

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="20dp"
            android:text="@string/str_card_time"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_overlay"
            android:textSize="16sp"
            android:textStyle="bold" />
        
        <LinearLayout
            android:id="@+id/linearlayout_info_opening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TextView06"
            android:layout_below="@+id/TextView06"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >
            
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativelayout_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp" >

        <TextView
            android:id="@+id/textView_card_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/str_card_copyright"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black_overlay"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imageView_report_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView_card_copyright"
            android:layout_below="@+id/textView_card_copyright"
            android:layout_marginTop="10dp"
            android:src="@mipmap/report_icon" />

        <TextView
            android:id="@+id/TextView07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView_report_icon"
            android:layout_marginBottom="-1dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/imageView_report_icon"
            android:text="@string/str_card_report"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black_overlay"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>
