<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/result_cell_shadow"
        android:padding="15dp" 
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_search_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/str_search_category"
            android:textColor="@color/black_panel"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/scrollView_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="0.97" >

                <LinearLayout
                    android:id="@+id/linearLayout_search_subject_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <ProgressBar
                            android:id="@+id/ProgressBar01"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="100dp" />
                    </RelativeLayout>
                </LinearLayout>
            </ScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:paddingTop="70dp"
                android:id="@+id/relativeLayout_no_search">

                <TextView
                    android:id="@+id/textView_no_results"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/str_no_results"
                    android:textColor="@color/black_overlay"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView_no_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_no_results"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/icon_no_results" />

                <TextView
                    android:id="@+id/textView_check_soon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView_no_icon"
                    android:layout_centerHorizontal="true"
                    android:text="@string/str_check_soon"
                    android:textColor="@color/black_overlay"
                    android:textSize="20sp" />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
